--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:orientation="horizontal"
-    android:padding="4dp">
+    android:padding="4dp"
+    android:gravity="center_vertical">
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/txt_path"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:gravity="center_vertical" />
+    <ImageView
+        android:id="@+id/img_file_type"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/txt_filetype"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="8dp">
+        <TextView
+            android:id="@+id/txt_file_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/txt_size"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/txt_file_name"
+            android:layout_marginTop="6dp"/>
+    </RelativeLayout>
 
 </LinearLayout>
