降级编译版本

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,7 +17,8 @@
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/edit_path"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:imeOptions="actionSearch"/>
 
         <Button
             android:id="@+id/btn_search"
