--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,13 +18,14 @@
             android:id="@+id/edit_path"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionSearch"/>
+            android:imeOptions="actionDone"/>
 
         <Button
             android:id="@+id/btn_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/action_search"/>
+            android:text="@string/action_search"
+            />
 
     </LinearLayout>
 
@@ -36,7 +37,6 @@
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
 
         <android.support.v4.widget.ContentLoadingProgressBar
             android:id="@+id/progress"
