新增了线程池取消。

--- a/app/src/main/res/layout/activity_async_task_pool.xml
+++ b/app/src/main/res/layout/activity_async_task_pool.xml
@@ -25,6 +25,12 @@
             android:text="搜索" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/txt_finded_count"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
