--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -57,6 +57,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/action_choose_folder" />
+            <Button
+                android:id="@+id/btn_storage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="查看空间大小" />
         </LinearLayout>
 
     </LinearLayout>
